--- a/journal_app/templates/subscription/cancel.html
+++ b/journal_app/templates/subscription/cancel.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
-<div class="container mt-5">
-  <p>You have cancelled the checkout.</p>
-  <p><a href="{% url "subscription:home" %}">Return to the dashboard</a></p>
-</div>
+
+{% block content %}
+  <div class="container mt-5">
+    <p>You have cancelled the checkout.</p>
+    <p><a href="{% url "subscription:home" %}">Return to the dashboard</a></p>
+  </div>
+{% endblock %}
+
