--- a/journal_app/templates/subscription/success.html
+++ b/journal_app/templates/subscription/success.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block content %}
+  <p>You have successfully subscribed!</p>
+  <p><a href="{% url "subscription:home" %}">Return to the dashboard</a></p>
+{% endblock %}
 
-<p>You have successfully subscribed!</p>
-<p><a href="{% url "subscription:home" %}">Return to the dashboard</a></p>
