stripe implementation fixes

--- a/journal_app/templates/404.html
+++ b/journal_app/templates/404.html
@@ -6,4 +6,7 @@
 <h1>Page not found</h1>
 
 <p>This is not the page you were looking for.</p>
+  {% if content %}
+    {{ content }}
+  {% endif %}
 {% endblock content %}
