--- a/journal_app/templates/account/login.html
+++ b/journal_app/templates/account/login.html
@@ -31,7 +31,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 {% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+<a href="{{ signup_url }}" class="entry-link">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
 <form class="login" method="POST" action="{% url 'account_login' %}">
@@ -40,8 +40,8 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">Forgot Password?</a>
-  <button class="primaryAction btn btn-primary" type="submit">Sign In</button>
+  <a class="button secondaryAction entry-link" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+  <button class="primaryAction btn btn-theme" type="submit">Sign In</button>
 </form>
 
 {% endblock %}
