--- a/journal_app/templates/account/password_set.html
+++ b/journal_app/templates/account/password_set.html
@@ -11,7 +11,7 @@
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn btn-primary" type="submit" name="action" value="Set Password"/>
+        <input class="btn btn-theme" type="submit" name="action" value="Set Password"/>
     </form>
 {% endblock %}
 
