--- a/journal_app/templates/journal/entry_detail.html
+++ b/journal_app/templates/journal/entry_detail.html
@@ -1,5 +1,5 @@
 {%  extends 'base.html' %}
-{% load crispy_forms_tags static %}
+{% load crispy_forms_tags static humanize %}
 
 {% block title %}{{ entry.title }}{% endblock %}
 
@@ -26,9 +26,9 @@
   <div class="row">
     <div class="col-lg-12">
       <p>
-        <b>Created:</b> {{ entry.created|date:"SHORT_DATETIME_FORMAT" }}
+        <b>Created:</b> {{ entry.created|naturaltime }}
         {% if entry.modified %}
-          <b>Updated:</b> {{ entry.updated|date:"SHORT_DATETIME_FORMAT" }}
+          <b>Updated:</b> {{ entry.updated|naturaltime }}
         {% endif %}
       </p>
 {#      <form method="post" action=".">#}
