--- a/journal_app/templates/journal/contact_list.html
+++ b/journal_app/templates/journal/contact_list.html
@@ -38,7 +38,7 @@
       </table>
     {% endif %}
     {% empty %}
-    <h2>There are no entries yet. <a href="{% url 'journal:contact_create' %}" class="btn btn-theme btn-lg btn-block"><i class="fas fa-plus"></i> Add one here!</a></h2>
+    <h2>There are no entries yet. <a href="{% url 'journal:contact_create' %}" class="btn btn-theme btn-lg btn-block"><i class="fas fa-plus"></i> Add a contact here!</a></h2>
   {% endfor %}
 
 {% endblock %}
