--- a/journal_app/templates/journal/entry_form.html
+++ b/journal_app/templates/journal/entry_form.html
@@ -28,7 +28,7 @@
             {{ view.formset }}
           </table>
         {% endif %}
-        <button type="submit" class="btn btn-theme btn-lg btn-block">Save</button>
+        <button type="submit" class="btn btn-theme">Save</button>
       </form>
     </div>
   {% endwith %}
