added subscription information to profile

--- a/journal_app/templates/users/user_detail.html
+++ b/journal_app/templates/users/user_detail.html
@@ -53,8 +53,8 @@
     <div class="col-sm-12">
       <h4><u>Subscription</u></h4>
       <p>
-        <b>Subscription Type:</b> <br/>
-        <b>Subscription Expiration:</b>
+        <b>Subscription Type:</b>{% if subscription.status == "active" %} {{ product.name }}{% else %}Free{% endif %}<br/>
+        <b>Subscription Expiration:</b>{% if subscription.status == "active" %} {{ subscription_end|naturaltime }}{% else %}Free{% endif %}
       </p>
     </div>
   </div>
