--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}Journal App{% endblock title %}</title>
+    <title>{% block title %}Time Capsule Journal{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A journalling application that will allow your notes to be sent to someone you love once you pass.">
+    <meta name="description" content="A journal application that will allow your notes to be sent to someone you love once you pass or schedule a time for them to read your memories.">
     <meta name="author" content="CJ Stein">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
