added link to subscriptions

--- a/journal_app/templates/users/user_detail.html
+++ b/journal_app/templates/users/user_detail.html
@@ -52,7 +52,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h4>
-        <a href="{% url 'subscription:home' %}">
+        <a href="{% url 'subscription:home' %}" class="entry-link">
           <u>Subscription</u>
         </a>
       </h4>
