--- a/journal_app/templates/journal/contact_entry_list.html
+++ b/journal_app/templates/journal/contact_entry_list.html
@@ -19,11 +19,10 @@
         </h5>
       </div>
     </div>
-  {% for entry in entry_list %}
+  {% for entry in entries %}
     <div class="row{% if forloop.first %} mt-2{% endif %}">
       <div class="col-lg-12">
         <h3>{{ entry.title }}</h3>
-        <p><b>Last Updated:</b> {{ entry.updated|naturaltime  }}</p>
         <a href="{{ entry.get_absolute_url }}" class="entry-link">
           <div class="col-lg-12 entry-area mw-100">
             {{ entry.body|safe|truncatewords:75 }}
