--- a/journal_app/templates/journal/entry_list.html
+++ b/journal_app/templates/journal/entry_list.html
@@ -7,16 +7,20 @@
 {% endblock %}
 
 {% block content %}
-  {% for entry in entry_list %}
+  {% for entry in entries %}
       <div class="row">
         <div class="col-lg-12 mt-1">
           <a href="{% if released %}{% url 'journal:released_entry_detail' contact.pk entry.pk %}{% else %}{{ entry.get_absolute_url }}{% endif %}">
             <h3 class="entry-link">{{ entry.title }}</h3>
           </a>
-            <div class="col-lg-12 mw-100">
-                {{ entry.body|safe|truncatewords:75 }}
-            </div>
-
+          {% if entry.released %}
+            <p><b>Created: </b> {{ entry.created }}</p>
+          {% endif %}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 mw-100">
+          {{ entry.body|safe|truncatewords:75 }}
         </div>
       </div>
     <hr/>
