--- a/journal_app/templates/base.html
+++ b/journal_app/templates/base.html
@@ -57,7 +57,7 @@
       {% endblock content %}
 
     </div> <!-- /container -->
-    {% block footer %}{% endblock %}
+    {% block footer %}{% include 'footer.html' %}{% endblock %}
     {% block modal %}{% endblock modal %}
 
     {% block javascript %}
