--- a/journal_app/templates/footer.html
+++ b/journal_app/templates/footer.html
@@ -1,1 +1,23 @@
-
+<footer class="page-footer font-small pt-3 drgrey">
+  <div class="container-fluid text-center text-md-left">
+    <div class="row">
+      <div class="col-md-6">
+        <h5 class="text-uppercase">
+          Time Capsule Journal
+        </h5>
+        <p>Thanks for using the service!</p>
+      </div>
+      <div class="col-md-3">
+        <h5 class="text-uppercase">
+          Support
+        </h5>
+        <ul class="list-unstyled">
+          <li>
+            <a href="{% url "privacy-policy" %}" class="footer-link">Privacy Policy</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-copyright text-center py-3">© 2020 Copyright: Time Capsule Journal LLC</div>
+  </div>
+</footer>
