--- a/journal_app/templates/footer.html
+++ b/journal_app/templates/footer.html
@@ -8,6 +8,8 @@
         <p>Thanks for using the service!</p>
       </div>
       <div class="col-md-3">
+      </div>
+      <div class="col-md-3">
         <h5 class="text-uppercase">
           Support
         </h5>
