fixed checkin link

--- a/journal_app/templates/account/email/reminder_email.html
+++ b/journal_app/templates/account/email/reminder_email.html
@@ -10,6 +10,6 @@ Better checkin so your Entries don't get release
 
 {% block content %}
   {{ user.username }},<br/>
-  Your Entries will be released in {{ user.days_until_release }} days.  Please checkin again <a href="{% url 'users:anon_checkin' user.username user.checkin_link %}">here</a> or by copy and pasting the link below:<br>
-  {% url 'users:anon_checkin' user.username user.checkin_link %}
+  Your Entries will be released in {{ user.days_until_release }} days.  Please checkin again <a href="{{ user.get_absolute_checkin_link }}">here</a> or by copy and pasting the link below:<br>
+  {{ user.get_absolute_checkin_link }}
 {% endblock %}
