added "here" to link anchor

--- a/journal_app/templates/account/email/release_to_contact.html
+++ b/journal_app/templates/account/email/release_to_contact.html
@@ -11,7 +11,7 @@
 
 {% block content %}
   {{ contact.name }},<br/>
-  {{ user }} has shared memories with you.  You can read all the entries they shared with you <a href="{{ contact.released_entries_url }}"></a><br>
+  {{ user }} has shared memories with you.  You can read all the entries they shared with you <a href="{{ contact.released_entries_url }}">here</a><br>
   If the link doesn't work, copy and paste the address below:<br>
   {{ contact.released_entries_url }}
 {% endblock %}
