added utility to check whether user owns

--- a/journal_app/templates/403.html
+++ b/journal_app/templates/403.html
@@ -3,6 +3,6 @@
 {% block title %}Forbidden (403){% endblock %}
 
 {% block content %}
-<h1>Forbidden (403)</h1>
+<h2>Uh-oh unfortunately you attempt to get somewhere you couldn't go!</h2>
 
 {% endblock content %}
