--- a/journal_app/templates/403.html
+++ b/journal_app/templates/403.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}Forbidden (403){% endblock %}
+{% block title %}Something went wrong...{% endblock %}
 
 {% block content %}
-<h2>Uh-oh unfortunately you attempt to get somewhere you couldn't go!</h2>
+<h2>Uh-oh unfortunately you attempted to go somewhere you couldn't!</h2>
 
 {% endblock content %}
